--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
-    "zod": "latest"
+    "zod": "3.25.6"
   },
   "devDependencies": {
     "@types/node": "^22",
