--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vonix-health-dashboard",
+  "name": "vonix-health-web-application",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.66",
     "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^14.2.30",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -30,46 +31,50 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-sheet": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-textarea": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.46.1",
-    "ai": "^4.0.12",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-shared": "^0.7.0",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "ai": "^3.4.32",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "input-otp": "^1.4.1",
-    "lucide-react": "^0.454.0",
-    "next": "15.1.0",
-    "next-themes": "^0.4.4",
-    "react": "19.0.0",
-    "react-day-picker": "^9.2.0",
-    "react-dom": "19.0.0",
-    "react-hook-form": "^7.53.2",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.13.3",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.4",
+    "framer-motion": "^11.11.7",
+    "lucide-react": "^0.451.0",
+    "next": "14.2.30",
+    "next-themes": "^0.3.0",
+    "react": "^18",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-resizable-panels": "^2.1.4",
+    "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1",
+    "vaul": "^1.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "14.2.30",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
