--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.451.0",
-    "next": "14.2.30",
+    "next": "^14.2.30",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.4",
